--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.64.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
@@ -36,6 +38,7 @@
     "framer-motion": "^11.18.1",
     "iconsax-react-native": "^0.0.8",
     "nativewind": "^4.1.23",
+    "postcss": "^8.5.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
@@ -47,8 +50,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-linear-gradient": "~14.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -58,7 +60,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3"
   },
   "private": true
 }
